--- a/index.ondeck.html
+++ b/index.ondeck.html
@@ -4,12 +4,21 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 	<meta name="apple-mobile-web-app-capable" content="no" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <title>Geo Finder</title>
+	<title>Geo Finder</title>
 
-    <meta property="og:image" content="images/icon_300.png"/>
-    <link rel="apple-touch-icon" href="images/icon_300.png"/>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108858221-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
 
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+		gtag('config', 'UA-108858221-1');
+	</script>
+  <meta property="og:image" content="images/icon_300.png"/>
+  <link rel="apple-touch-icon" href="images/icon_300.png"/>
+
+  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script>
     	$(document).on("mobileinit", function () {
@@ -142,7 +151,7 @@
 
 	var app_id = "appHUknSmoIogemD5";
 	var app_key = "keyHtA4JdvolTnmFV";
-	var cat_names = [["Outreach","Community Outreach"],["Counseling","Counseling"],["Training","Job Opportunties/Training"],["Health","Health Services"],["Risk","High Risk"],["Multi","Multi-Service"]];
+	var cat_names = [["Outreach","Community Outreach"],["Counseling","Counseling"],["Training","Job Opportunities/Training"],["Health","Health Services"],["Risk","High Risk"],["Multi","Multi-Service"]];
 
 	var categories = "";
 	var ages = "";
@@ -283,8 +292,8 @@
       	$("#detail").html("");
       	$("#detail").html($("#detail").html() + "<h3>{{ item['fields']['Name'] }}</h3>")
       	$("#detail").html($("#detail").html() + "<h4>{{ item['fields']['Category'] }}</h4>");
-				$("#detail").html($("#detail").html() + "<p><b>Contact:</b> {{ item['fields']['Contact'] }}</p>");
-      	$("#detail").html($("#detail").html() + "<p><b>Website:</b> {{ item['fields']['Website'] }}</p>");
+				$("#detail").html($("#detail").html() + "<p><b>Contact:</b> <a v-bind:href=\"'mailto:'+item['fields']['Email']\" target=\"_blank\">{{ item['fields']['Email'] }}</a></p>");
+				$("#detail").html($("#detail").html() + "<p><b>Website:</b> <a v-bind:href=\"item['fields']['Website']\" target=\"_blank\">{{ item['fields']['Website'] }}</a></p>");
       	$("#detail").html($("#detail").html() + "<p><b>Age Range:</b> {{ item['fields']['Minimum Age'] }} - {{ item['fields']['Maximum Age'] }}</p>");
       	$("#detail").html($("#detail").html() + "<p><b>Gender:</b> {{ item['fields']['Gender'] }}</p>");
       	$("#detail").html($("#detail").html() + "<p><b>Address:</b> {{ item['fields']['Address'] }}</p>");
@@ -292,7 +301,6 @@
 				$("#detail").html($("#detail").html() + "<p><b>Valid As Of:</b> {{ item['fields']['Valid As Of'] }}</p>");
 
 			load_api_data('#details',3,id);
-
 
 			//$.mobile.changePage($('#details'), { transition: 'slide'})
 			next_page_2();
