--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title>Geo Finder</title>
 
-    <meta property="og:image" content="images/icon_300.png"/>
-    <link rel="apple-touch-icon" href="images/icon_300.png"/>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108858221-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
 
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+		gtag('config', 'UA-108858221-1');
+	</script>
+	<meta property="og:image" content="images/icon_300.png"/>
+	<link rel="apple-touch-icon" href="images/icon_300.png"/>
+
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script>
     	$(document).on("mobileinit", function () {
@@ -30,7 +39,7 @@
 <body>
 
 <div data-role="page" id="filter">
-	<div data-role="header">
+	<div data-role="header" data-position="fixed">
 		<h1>Juvenile Resource Finder</h1>
 		<a href="#about" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"></a>
 	</div>
@@ -43,8 +52,8 @@
     		</select>
 		</div>
 
-		<p> Enter age of the juvenile seeking services.</p>
-		<input name="age" id="age" data-type="number" placeholder="Input Age of Juvenile Seeking Services" onChange="list_page();">
+		<p> Enter age of the juvenile seeking services. Leave age blank to view all services.</p>
+		<input name="age" id="age" data-type="number" placeholder="Input Age" onChange="list_page();">
 
 		<fieldset id="categories" data-role="controlgroup">
 			<h3 style="margin-top:15px;">Check All That Apply:</h3>
@@ -65,13 +74,14 @@
 
 
 <div data-role="page" id="about">
-	<div data-role="header">
+	<div data-role="header" data-position="fixed">
 		<h1>About</h1>
-		<a href="#filter" data-transition="slide" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-arrow-l">Back</a>
+		<a href="#" data-rel="back" data-transition="slide" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-arrow-l ui-btn-icon-notext"></a>
 	</div>
 	<div data-role="content" class="content">
 		<p> Nicole Siino is the Legal Innovation and Technology Fellow in the Juvenile Defender Clinic at Suffolk University Law School. In addition to representing juveniles in juvenile delinquency matters, Nicole created this Juvenile Resource Finder after discovering there was no comprehensive list of resources that juveniles can benefit from. Nicole is in her last year of law school and hopes to pursue a career in public interest law. In addition to being a Student Attorney and a Legal Innovation and Technology Fellow, she is a Content Editor on the Journal of High Technology Law.</p>
 		<p> You can check out the <a href="https://www.suffolklitlab.org">Suffolk Lit Lab's</a> website to see other LIT projects!<p>
+		<p> This website application runs of the data from this <a href="https://airtable.com/invite/l?inviteId=invNi18Brb4LgHUTU&inviteToken=d74b5b443352026378882c4ed93f1c90ec1f748b61f1829d8519d0a167d9d7b1">Airtable</a>. If you find any errors, please <a href="http://www.google.com/recaptcha/mailhide/d?k=01DtI9fDf96v8pwKllD8vKuw==&amp;c=CPXOhMtk5VfOcZ-0o8cksnj0WU6PIU0ac8i0aZ4yG0A=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01DtI9fDf96v8pwKllD8vKuw\x3d\x3d\x26c\x3dCPXOhMtk5VfOcZ-0o8cksnj0WU6PIU0ac8i0aZ4yG0A\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal contact e-mail address">contact</a> the Suffolk LIT Lab.
 		<p style="text-align:center"><a href="http://suffolklitlab.org/" target="_blank"><img src="images/LIT_logo.png" width="200px"/ border="0"></a></p>
 
 	</div>
@@ -80,9 +90,9 @@
 
 
 <div data-role="page" id="details">
-	<div data-role="header">
+	<div data-role="header" data-position="fixed">
 		<h1>Details</h1>
-		<a href="#" data-rel="back" data-transition="slide" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-arrow-l">Back</a>
+		<a href="#" data-rel="back" data-transition="slide" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-arrow-l ui-btn-icon-notext"></a>
 	</div>
 	<div data-role="content" class="content">
 		<div id="detail" v-for="" v-if="">
@@ -93,7 +103,7 @@
 
 
 <div data-role="page" id="results">
-	<div data-role="header">
+	<div data-role="header" data-position="fixed">
 		<h1>Results</h1>
 		<a href="#filter" data-transition="slide" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-home ui-btn-icon-notext"></a>
 		<div data-role="navbar">
@@ -116,7 +126,7 @@
 
 
 <div data-role="page" id="map-page" style="background:#798e9e;">
-	<div data-role="header">
+	<div data-role="header" data-position="fixed">
 		<h1>Results</h1>
 		<a href="#filter" data-transition="slide" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-home ui-btn-icon-notext"></a>
 	</div>
@@ -142,7 +152,7 @@
 
 	var app_id = "appHUknSmoIogemD5";
 	var app_key = "keyHtA4JdvolTnmFV";
-	var cat_names = [["Outreach","Community Outreach"],["Counseling","Counseling"],["Training","Job Opportunties/Training"],["Health","Health Services"],["Risk","High Risk"],["Multi","Multi-Service"]];
+	var cat_names = [["Outreach","Community Outreach"],["Counseling","Counseling"],["Training","Job Opportunities/Training"],["Health","Health Services"],["Risk","High Risk"],["Multi","Multi-Service"]];
 
 	var categories = "";
 	var ages = "";
@@ -283,11 +293,11 @@
       	$("#detail").html("");
       	$("#detail").html($("#detail").html() + "<h3>{{ item['fields']['Name'] }}</h3>")
       	$("#detail").html($("#detail").html() + "<h4>{{ item['fields']['Category'] }}</h4>");
-				$("#detail").html($("#detail").html() + "<p><b>Contact:</b> {{ item['fields']['Contact'] }}</p>");
-      	$("#detail").html($("#detail").html() + "<p><b>Website:</b> {{ item['fields']['Website'] }}</p>");
-      	$("#detail").html($("#detail").html() + "<p><b>Age Range:</b> {{ item['fields']['Minimum Age'] }} - {{ item['fields']['Maximum Age'] }}</p>");
-      	$("#detail").html($("#detail").html() + "<p><b>Gender:</b> {{ item['fields']['Gender'] }}</p>");
-      	$("#detail").html($("#detail").html() + "<p><b>Address:</b> {{ item['fields']['Address'] }}</p>");
+      	$("#detail").html($("#detail").html() + "<p><b>Ages:</b> {{ item['fields']['Minimum Age'] }}-{{ item['fields']['Maximum Age'] }} &nbsp;&nbsp; <b>Gender(s):</b> {{ item['fields']['Gender'] }}</p>");
+		$("#detail").html($("#detail").html() + "<p><b>Phone:</b> <a v-bind:href=\"'tel:'+item['fields']['Phone']\" target=\"_blank\">{{ item['fields']['Phone'] }}</p>");
+		$("#detail").html($("#detail").html() + "<p><b>Email:</b> <a v-bind:href=\"'mailto:'+item['fields']['Email']\" target=\"_blank\">{{ item['fields']['Email'] }}</a></p>");
+      	$("#detail").html($("#detail").html() + "<p><b>Website:</b> <a v-bind:href=\"item['fields']['Website']\" target=\"_blank\">{{ item['fields']['Website'] }}</a></p>");
+      	$("#detail").html($("#detail").html() + "<p><b>Address:</b> <a v-bind:href=\"'https://www.google.com/maps/place/'+item['fields']['Address']\" target=\"_blank\">{{ item['fields']['Address'] }}</a></p>");
       	$("#detail").html($("#detail").html() + "<p><b>Description:</b> {{ item['fields']['Description'] }}</p>");
 				$("#detail").html($("#detail").html() + "<p><b>Valid As Of:</b> {{ item['fields']['Valid As Of'] }}</p>");
 
