--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<a href="#about" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"></a>
 	</div>
 	<div data-role="content" class="content">
-		<div class="ui-field-contain">Use the following selections to find social, community based programs & services in Suffolk County.
+		<div class="ui-field-contain">Use the following selections to find juvenile social, community based programs & services in and around Boston.
 			<select id="town" name="select-native-1" id="select-native-1" style="width:100%" onChange="list_page();">
         		<option value="0">Choose a Location</option>
 						<option id="loading_selection" value="0">Loading Locations...</option>
@@ -56,7 +56,7 @@
 		<input name="age" id="age" data-type="number" placeholder="Input Age" onChange="list_page();">
 
 		<fieldset id="categories" data-role="controlgroup">
-			<h3 style="margin-top:15px;">Check All That Apply:</h3>
+			<p style="margin-top:15px;">Check the type(s) of service(s) you are looking for:</p>
 		</fieldset>
 
 		<fieldset data-role="controlgroup" data-type="horizontal">
@@ -80,8 +80,9 @@
 	</div>
 	<div data-role="content" class="content">
 		<p> Nicole Siino is the Legal Innovation and Technology Fellow in the Juvenile Defender Clinic at Suffolk University Law School. In addition to representing juveniles in juvenile delinquency matters, Nicole created this Juvenile Resource Finder after discovering there was no comprehensive list of resources that juveniles can benefit from. Nicole is in her last year of law school and hopes to pursue a career in public interest law. In addition to being a Student Attorney and a Legal Innovation and Technology Fellow, she is a Content Editor on the Journal of High Technology Law.</p>
-		<p> You can check out the <a href="https://www.suffolklitlab.org">Suffolk Lit Lab's</a> website to see other LIT projects!<p>
-		<p> This website application runs of the data from this <a href="https://airtable.com/invite/l?inviteId=invNi18Brb4LgHUTU&inviteToken=d74b5b443352026378882c4ed93f1c90ec1f748b61f1829d8519d0a167d9d7b1">Airtable</a>. If you find any errors, please <a href="http://www.google.com/recaptcha/mailhide/d?k=01DtI9fDf96v8pwKllD8vKuw==&amp;c=CPXOhMtk5VfOcZ-0o8cksnj0WU6PIU0ac8i0aZ4yG0A=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01DtI9fDf96v8pwKllD8vKuw\x3d\x3d\x26c\x3dCPXOhMtk5VfOcZ-0o8cksnj0WU6PIU0ac8i0aZ4yG0A\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal contact e-mail address">contact</a> the Suffolk LIT Lab.
+		<p> This web app contains a comprehensive list of juvenile programs & services to help to provide access to justice. The use of the app allows juveniles to find and successfully participate in these programs which can have long-lasting impacts on their sentences - and their futures. The app enables its users to quickly search and find juvenile resources while in court, on the go, or sitting in an office.</p>
+		<p> You can check out the <a href="https://www.suffolklitlab.org">Suffolk Lit Lab's</a> website to see other LIT projects!</p>
+		<p> This website application runs of the data from this <a href="https://airtable.com/invite/l?inviteId=invNi18Brb4LgHUTU&inviteToken=d74b5b443352026378882c4ed93f1c90ec1f748b61f1829d8519d0a167d9d7b1">Airtable</a>. If you find any errors, please <a href="http://www.google.com/recaptcha/mailhide/d?k=01DtI9fDf96v8pwKllD8vKuw==&amp;c=CPXOhMtk5VfOcZ-0o8cksnj0WU6PIU0ac8i0aZ4yG0A=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01DtI9fDf96v8pwKllD8vKuw\x3d\x3d\x26c\x3dCPXOhMtk5VfOcZ-0o8cksnj0WU6PIU0ac8i0aZ4yG0A\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal contact e-mail address">contact</a> the Suffolk LIT Lab.</p>
 		<p style="text-align:center"><a href="http://suffolklitlab.org/" target="_blank"><img src="images/LIT_logo.png" width="200px"/ border="0"></a></p>
 
 	</div>
