--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 	<meta property="og:image" content="images/icon_300.png"/>
 	<link rel="apple-touch-icon" href="images/icon_300.png"/>
 
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+	<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script>
     	$(document).on("mobileinit", function () {
         	$.mobile.hashListeningEnabled = false;
         	$.mobile.pushStateEnabled = false;
     	});
 	</script>
-	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 	<style>
 		.content {
 			text-align:left;
@@ -82,8 +82,8 @@
 		<p> Nicole Siino is the Legal Innovation and Technology Fellow in the Juvenile Defender Clinic at Suffolk University Law School. In addition to representing juveniles in juvenile delinquency matters, Nicole created this Juvenile Resource Finder after discovering there was no comprehensive list of resources that juveniles can benefit from. Nicole is in her last year of law school and hopes to pursue a career in public interest law. In addition to being a Student Attorney and a Legal Innovation and Technology Fellow, she is a Content Editor on the Journal of High Technology Law.</p>
 		<p> This web app contains a comprehensive list of juvenile programs & services to help to provide access to justice. The use of the app allows juveniles to find and successfully participate in these programs which can have long-lasting impacts on their sentences - and their futures. The app enables its users to quickly search and find juvenile resources while in court, on the go, or sitting in an office.</p>
 		<p> You can check out the <a href="https://www.suffolklitlab.org">Suffolk Lit Lab's</a> website to see other LIT projects!</p>
-		<p> This website application runs of the data from this <a href="https://airtable.com/invite/l?inviteId=invNi18Brb4LgHUTU&inviteToken=d74b5b443352026378882c4ed93f1c90ec1f748b61f1829d8519d0a167d9d7b1">Airtable</a>. If you find any errors, please <a href="http://www.google.com/recaptcha/mailhide/d?k=01DtI9fDf96v8pwKllD8vKuw==&amp;c=CPXOhMtk5VfOcZ-0o8cksnj0WU6PIU0ac8i0aZ4yG0A=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01DtI9fDf96v8pwKllD8vKuw\x3d\x3d\x26c\x3dCPXOhMtk5VfOcZ-0o8cksnj0WU6PIU0ac8i0aZ4yG0A\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal contact e-mail address">contact</a> the Suffolk LIT Lab.</p>
-		<p style="text-align:center"><a href="http://suffolklitlab.org/" target="_blank"><img src="images/LIT_logo.png" width="200px"/ border="0"></a></p>
+		<p> This website application runs of the data from this <a href="https://airtable.com/invite/l?inviteId=invNi18Brb4LgHUTU&inviteToken=d74b5b443352026378882c4ed93f1c90ec1f748b61f1829d8519d0a167d9d7b1">Airtable</a>. If you find any errors, please <a href="mailto:litlab@suffolk\.edu">Email</a> the Suffolk LIT Lab.</p>
+		<p style="text-align:center"><a href="https://suffolklitlab.org/" target="_blank"><img src="images/LIT_logo.png" width="200px"/ border="0"></a></p>
 
 	</div>
 </div>
