--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <div data-role="page" id="region">
 	<div data-role="header" data-position="fixed">
 		<h1>Resource Finder</h1>
+		<a href="#about" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"</> 
 	</div>
 	<div data-role="content" class="content">
 	<div class="ui-field-contain"> <p> Choose the type of resource needed in the area desired or choose to see all resources.</p>
