--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 	</div>
 	<div data-role="content" class="content">
 	<a href="#about" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"</> 
-	<div class="ui-field-contain"> <p> Choose the type of resource needed in the area desired or choose to see all resources.</p>
+	<div class="ui-field-contain"> 
+	<p> Choose the type of resource needed in the area desired or choose to see all resources.</p>
 	
 		<div data-role="collapsible" data-collapsed="false">
     		<h4>Choose you state.</h4>
