--- a/index.html
+++ b/index.html
@@ -40,45 +40,12 @@
 
 <div data-role="page" id="region">
 	<div data-role="header" data-position="fixed">
+		<a href="#test" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"></a>
 		<h1>Resource Finder</h1>
 	</div>
-	<div data-role="content" class="content">
-	<a href="#about" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"</> 
-	<div class="ui-field-contain"> 
-	<p> Choose the type of resource needed in the area desired or choose to see all resources.</p>
-	
-		<div data-role="collapsible" data-collapsed="false">
-    		<h4>Choose you state.</h4>
-    			<ul data-role="listview">
-        			<li><a href="#">Massachusetts</a></li>
-        			<li><a href="#">New York</a></li>
-        			<li><a href="#">New Hampshire</a></li>
-    			</ul>
-		</div>
-	 </div>
- 	<div data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="carat-u">
-    	<h2>Juvenile Resources</h2>
-    		<ul data-role="listview">
-        		<li><a href="#filter">Western Massachusetts</a></li>
-        		<li><a href="#filter">Central Massachusetts</a></li>
-        		<li><a href="#filter">Eastern Massachusetts</a></li>
-        		<li><a href="#filter">Southeastern Massachusetts</a></li>
-        		<li><a href="#filter">Northeastern Massachusetts</a></li>
-    		</ul>
-  	</div>
-  		
-	<div data-role="collapsible" data-collapsed-icon="carat-d" data-expanded-icon="carat-u" data-theme="b" data-content-theme="b" id="adult">
-    	<h2>Adult Resources</h2>
-    		<ul data-role="listview">
-        		<li><a href="#">Western Massachusetts</a></li>
-        		<li><a href="#">Central Massachusetts</a></li>
-        		<li><a href="#">Eastern Massachusetts</a></li>
-        		<li><a href="#">Southeastern Massachusetts</a></li>
-        		<li><a href="#">Northeastern Massachusetts</a></li>
-    		</ul>
-  		</div>
-  		
-  	<div> <a href="#" class="ui-btn ui-shadow">View Full List of Resources</a> </div>
+	<div data-role="content" class="content" class="ui-field-contain">
+	<p> Choose the type of resource needed in the area desired or choose to see all resources.</p> 
+	</div>
 </div>
 
 <div data-role="page" id="filter">
