--- a/index.html
+++ b/index.html
@@ -40,20 +40,24 @@
 
 <div data-role="page" id="region">
 	<div data-role="header" data-position="fixed">
-		<a href="#test" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"></a>
+		<a href="#about" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"></a>
 		<h1>Resource Finder</h1>
 	</div>
+	
 	<div data-role="content" class="content" class="ui-field-contain">
-	<p> Choose the type of resource needed in the area desired or choose to see all resources.</p> 
+		<p> Choose the type of resource needed in the area desired or choose to see all resources.</p>
+		
+		<a href="#filter"class="ui-btn ui-corner-all">Go to filter page</a>
 	</div>
 </div>
 
 <div data-role="page" id="filter">
 	<div data-role="header" data-position="fixed">
 		<h1>Adult Resource Finder</h1>
-		<a href="#about" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"</> 
-		<a href="#region" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-gear" data-transition="slideup">
+		<a href="#about" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"></a> 
+		<a href="#region" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-icon-left ui-icon-gear" data-transition="slideup"></a> 
 	</div>
+	
 	<div data-role="content" class="content">
 		<div class="ui-field-contain">Use the following selections to find social, community based programs & services.
 			<select id="town" name="select-native-1" id="select-native-1" style="width:100%" onChange="list_page();">
@@ -87,7 +91,6 @@
 <div data-role="page" id="about">
 	<div data-role="header" data-position="fixed">
 		<h1>About</h1>
-		<a href="#test" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"></a>
 		<a href="#" data-rel="back" data-transition="slide" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-arrow-l ui-btn-icon-notext"></a>
 	</div>
 	<div data-role="content" class="content">
@@ -99,20 +102,6 @@
 
 	</div>
 </div>
-
-<div data-role="page" id="test">
-	<div data-role="header" data-position="fixed">
-		<h1>Test</h1>
-		<a href="#" data-rel="back" data-transition="slide" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-arrow-l ui-btn-icon-notext"></a>
-	</div>
-	<div data-role="content" class="content">
-		<p> This is a test. I wonder if this will work.</p>
-		<p> I have my doubts...</p>
-		<p style="text-align:center"><a href="https://suffolklitlab.org/" target="_blank"><img src="images/LIT_logo.png" width="200px"/ border="0"></a></p>
-
-	</div>
-</div>
-
 
 
 <div data-role="page" id="details">
