--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		}
 	</style>
 </head>
-<body>
+<body id="body" onLoad="loadCookies();">
 
 <div data-role="page" id="region">
 	<div data-role="header" data-position="fixed">
@@ -44,14 +44,14 @@
 		<h1>Resource Finder</h1>
 	</div>
 	<div data-role="content" class="content" class="ui-field-contain">
-	<p> Choose the type of resource needed in the area desired or choose to see all resources.</p> 
+	<p> Choose the type of resource needed in the area desired or choose to see all resources.</p>
 	</div>
 </div>
 
 <div data-role="page" id="filter">
 	<div data-role="header" data-position="fixed">
 		<h1>Adult Resource Finder</h1>
-		<a href="#about" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"</> 
+		<a href="#about" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"</>
 		<a href="#region" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-left ui-icon-gear" data-transition="slideup">
 	</div>
 	<div data-role="content" class="content">
@@ -64,7 +64,7 @@
 		</div>
 
 		<p> Enter age of the client seeking services. Leave age blank to view all services.</p>
-		<input name="age" id="age" data-type="number" placeholder="Input Age" onChange="list_page();">
+		<input name="age" id="age" data-type="number" placeholder="Input Age" onClick="saveCookies" onChange="list_page();">
 
 		<fieldset id="categories" data-role="controlgroup">
 			<p style="margin-top:15px;">Check the type(s) of service(s) you are looking for:</p>
@@ -184,6 +184,38 @@
 	var ages = "";
 	var work = 0;
 
+	function createCookie(name,value,days) {
+        if (days) {
+            var date = new Date();
+            date.setTime(date.getTime()+(days*24*60*60*1000));
+            var expires = "; expires="+date.toGMTString();
+        }
+        else var expires = "";
+        document.cookie = name+"="+value+expires+"; path=/";
+    }
+
+    function readCookie(name) {
+        var nameEQ = name + "=";
+        var ca = document.cookie.split(';');
+        for(var i=0;i < ca.length;i++) {
+            var c = ca[i];
+            while (c.charAt(0)==' ') c = c.substring(1,c.length);
+            if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
+        }
+        return null;
+    }
+
+    function loadCookies() {
+        if (readCookie("age")) {
+            $("#age").val(readCookie("age"));
+        }
+    }
+
+    function saveCookies() {
+        key = $("#age").val().trim();
+        createCookie("age",age,365*100);
+    }
+
 	function load_first() {
 			cat_names.forEach((cat, index) => {
 					$("#categories").html( $("#categories").html() + "<input type=\"checkbox\" name=\"checkbox-v-"+cat[0]+"\" id=\"checkbox-v-"+cat[0]+"\" onChange=\"list_page();\" checked=\"checked\">");
@@ -210,9 +242,9 @@
 			//apicall = "https://api.airtable.com/v0/"+app_id+"/" + $('#town').find(":selected").text() + "/?filterByFormula=(RECORD_ID()=\""+id+"\")";
 			apicall = "https://api.airtable.com/v0/"+app_id+"/Resources/?filterByFormula=(RECORD_ID()=\""+id+"\")";
 		}
- 
-	
-	var column_names = 
+
+
+	var column_names =
 
 		var app = new Vue({
               el: target,
@@ -313,7 +345,7 @@
 				lat = geo_data[0];
 				lon = geo_data[1];
 				zoomin = geo_data[2];
-	
+
 			    load_api_data('#results',2);
 
 	  	} else {
