--- a/index.html
+++ b/index.html
@@ -35,6 +35,67 @@
 			padding:0 15px 25px 15px
 		}
 	</style>
+	
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+/* Popup container - can be anything you want */
+.popup {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* The actual popup */
+.popup .popuptext {
+  visibility: hidden;
+  width: 160px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -80px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+/* Toggle this class - hide and show the popup */
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;} 
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
+}
+</style>
+
 </head>
 <body>
 
@@ -44,17 +105,8 @@
 		<h1>Resource Finder</h1>
 	</div>
 	
-	<div data-role="content" class="content" class="ui-field-contain">
-		<div data-role="controlgroup" data-type="horizontal">
-    		<p><b>Choose Resource Type:</b></p>
-    			<input type="radio" name="radio-choice-h-2" id="radio-choice-h-2a" value="on" checked="checked">
-    			<label for="radio-choice-h-2a">Juvenile</label>
-				<input type="radio" name="radio-choice-h-2" id="radio-choice-h-2b" value="off">
-				<label for="radio-choice-h-2b">Adult</label>
-		</div>
-	
-	
-		<p><b>Choose the region for desired program.</b></p>
+	<div data-role="content" class="content">
+		<p>Choose the region for desired program.</p>
 		
 		<div data-role="collapsible" data-inset="false">
     		<h3>Massachusetts</h3>
@@ -109,6 +161,7 @@
     		<label for="radio-choice-h-2b">Map View</label>
 		</fieldset>
 
+		<a href="#map-page" data-transition="slide" data-role="button">map</a>
 		<a href="javascript:results_page();" data-role="button">Find Resources</a>
 
 	</div>
@@ -183,14 +236,25 @@
 			</ul>
 		</div>
 	</div>
-	
-	<div data-role="footer" style="overflow:hidden;">
-    <h4 style="text-align:center;">Undisclosed Location</h4>
-	</div><!-- /footer -->
-	
-		<div>
-			<div id="map" style="width:100%;height:100px;"></div>
+
+	<div>
+		<div id="map" style="width:100%;height:100px;"></div>
+	</div>
+		
+	<div data-role="footer">
+		<body style="text-align:center">
+		<div class="popup" onclick="myFunction()"><h4>Undisclosed Locations</h4>
+  			<span class="popuptext" id="myPopup">List of undisclosed locations</span>
 		</div>
+
+	<script>
+	// When the user clicks on div, open the popup
+	function myFunction() {
+  		var popup = document.getElementById("myPopup");
+  		popup.classList.toggle("show");
+	}
+	</script>
+	</div>
 </div>
 
 <!-- Include Dependency Scripts -->
