--- a/index.html
+++ b/index.html
@@ -28,37 +28,34 @@
 	</script>
 	<script>
 
-function createCookie(name,value,days) {
-	if (days) {
-			var date = new Date();
-			date.setTime(date.getTime()+(days*24*60*60*1000));
-			var expires = "; expires="+date.toGMTString();
-	}
-	else var expires = "";
-	document.cookie = name+"="+value+expires+"; path=/";
-}
-
-function readCookie(name) {
-		var nameEQ = name + "=";
-		var ca = document.cookie.split(';');
-		for(var i=0;i < ca.length;i++) {
+	function createCookie(name,value,days) {
+			if (days) {
+				var date = new Date();
+				date.setTime(date.getTime()+(days*24*60*60*1000));
+				var expires = "; expires="+date.toGMTString();
+			}
+			else var expires = "";
+			document.cookie = name+"="+value+expires+"; path=/";
+		}
+		function readCookie(name) {
+			var nameEQ = name + "=";
+			var ca = document.cookie.split(';');
+			for(var i=0;i < ca.length;i++) {
 				var c = ca[i];
 				while (c.charAt(0)==' ') c = c.substring(1,c.length);
 				if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
+			}
+			return null;
 		}
-		return null;
-}
-
-function loadCookies() {
-			 if (readCookie("age")) {
-					 $("#age").val(readCookie("age"));
-			 }
-}
-
-function saveCookies() {
-        key = $("#age").val().trim();
-        createCookie("age",age,365*100);
-    }
+		function loadCookies() {
+			if (readCookie("age")) {
+				$("#age").val(readCookie("age"));
+			}
+		}
+		function saveCookies() {
+			key = $("#age").val().trim();
+			createCookie("age",age,365*100);
+		}
 </script>
 	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 	<style>
@@ -70,9 +67,9 @@ function saveCookies() {
 		}
 	</style>
 </head>
-<body onLoad="loadCookies();">
+<body>
 
-<div data-role="page" id="filter">
+<div data-role="page" id="filter" onLoad="loadCookies();">
 	<div data-role="header" data-position="fixed">
 		<h1>Juvenile Resource Finder</h1>
 		<a href="#about" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"></a>
