--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 		}
 	</style>
 </head>
-<body>
+<body onLoad="loadCookies();">
 
-<div data-role="page" id="filter" onLoad="loadCookies();">
+<div data-role="page" id="filter">
 	<div data-role="header" data-position="fixed">
 		<h1>Juvenile Resource Finder</h1>
 		<a href="#about" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"></a>
