--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			}
 		}
 		function saveCookies() {
-			key = $("#age").val().trim();
+			age = $("#age").val().trim();
 			createCookie("age",age,365*100);
 		}
 </script>
