--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		}
 	</style>
 </head>
-<body onLoad="loadCookies();">
+<body>
 
 <div data-role="page" id="filter" onLoad="loadCookies();">
 	<div data-role="header" data-position="fixed">
