--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </head>
 <body>
 
-<div data-role="page" id="filter" onLoad="loadCookies();">
+<div data-role="page" id="filter" onLoad="loadCookies()">
 	<div data-role="header" data-position="fixed">
 		<h1>Juvenile Resource Finder</h1>
 		<a href="#about" class="ui-btn ui-icon-info ui-btn-icon-notext ui-corner-all ui-btn-right" data-transition="slide"></a>
