--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 			<a href="#edit" data-transition="slide" data-role="button">Claim This Program</a>
 		</div>
 		<div>
-			<a href="resource-map/pass.html">Reset</a>
+			<a href="pass.html" target="_blank" data-transition="slide" data-role="button">Reset Password</a>
 		</div>
 	</div>
 </div>
@@ -288,6 +288,9 @@
 		<form>
 			<label for="text-1"><b>Name of Program:</b></label>
 			<input type=text id=name">
+			
+			<label for=number><b>Number of Beds Available:</b></label>
+			<input type="number" name="quantity" min="0" max="50">
 
 			<label for="text-2"><b>Phone Number:</b></label>
 			<input type=text id=phone">
