--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					}
 	}
 	function saveCookies() {
-					age = $("age").val().trim();
+					age = $("age").val();
 					createCookie("age",age,365*100);
 	}
 </script>
