--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		</div>
 
 		<p> Enter age of the juvenile seeking services. Leave age blank to view all services.</p>
-		<input name="age" id="age" data-type="number" placeholder="Input Age" onChange="list_page();">
+		<input name="age" id="age" data-type="number" placeholder="Input Age" onChange="list_page();saveCookies();">
 
 		<fieldset id="categories" data-role="controlgroup">
 			<p style="margin-top:15px;">Check the type(s) of service(s) you are looking for:</p>
