--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     		<label for="radio-choice-h-2b">Map View</label>
 		</fieldset>
 
-		<a href="javascript:results_page();" onClick="saveCookies();" data-role="button">Find Resources</a>
+		<a href="javascript:results_page();" onClick="saveCookies();i=0;" data-role="button">Find Resources</a>
 
 	</div>
 </div>
